k8s/02-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: ecommerce
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
