k8s/04-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/part-of: ecommerce
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
