k8s/06-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: product
    app.kubernetes.io/part-of: ecommerce
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: product
  ports:
    - name: http
      port: 3001
      targetPort: 3001
