k8s/08-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: ecommerce
  labels:
    app.kubernetes.io/name: order
    app.kubernetes.io/part-of: ecommerce
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: order
  ports:
    - name: http
      port: 3002
      targetPort: 3002
